# logsentinel

./: .http  README.md  main.py  pyproject.toml
examples/: fastapi.py
logosentinel/: __init__.py  exceptions.py  handler.py  logger.py  middleware.py
logosentinel/client/: a_sync.py  sync.py
logosentinel/config/: base.py  prod.py
logosentinel/libs/: utils.py
