[project]
name = "logsentinel"
version = "0.1.0"
description = "AI-powered log monitoring SDK for Python applications"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Jeckonia Kwasa", email = "inctifra@gmail.com" }
]
dependencies = [
    "aiohttp>=3.13.2",
    "backoff>=2.2.1",
    "django-environ>=0.12.0",
    "fastapi[all]>=0.121.1",
    "httpx>=0.28.1",
    "requests>=2.32.3",
    "rich>=14.2.0",
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"


[project.urls]
Homepage = "https://github.com/inctifra/logsentinel"
Documentation = "https://pypi.org/project/logsentinel"
Source = "https://github.com/inctifra/logsentinel"
